--- a/advisory.html
+++ b/advisory.html
@@ -55,6 +55,15 @@
                     Comprehensive advice to find new growth opportunities, improve performance, <br>
                     manage risks and enhance business value
                 </div>
+
+                <a scrollTo="#connect">
+                    <button
+                            class="button_white button_large"
+                            style="width: 200px;"
+                    >
+                        Connect
+                    </button>
+                </a>
             </div>
         </div>
     </header>
